[gd_scene load_steps=8 format=3 uid="uid://dk7b1a1resbbt"]

[ext_resource type="Script" path="res://menus/victorymenu.gd" id="1_k5pjp"]
[ext_resource type="Texture2D" uid="uid://dsqvjearapl6j" path="res://assets/images/Endings/win_none.png" id="2_uosui"]
[ext_resource type="Texture2D" uid="uid://upnpmpvpgn4r" path="res://assets/images/Endings/win_good.png" id="3_s7rx2"]

[sub_resource type="Animation" id="Animation_n0b6w"]
resource_name = "Fade in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_txuv5"]
resource_name = "Fade out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_cnyxa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xwrr1"]
_data = {
"Fade in": SubResource("Animation_n0b6w"),
"Fade out": SubResource("Animation_txuv5"),
"RESET": SubResource("Animation_cnyxa")
}

[node name="victorymenu" type="CanvasLayer"]
script = ExtResource("1_k5pjp")
victory_phases = Array[CompressedTexture2D]([ExtResource("2_uosui"), ExtResource("3_s7rx2")])

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
stretch_mode = 6

[node name="VBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -65.17
offset_right = 174.0
offset_bottom = -34.17
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.265, 2.265)
pivot_offset = Vector2(152.567, 16.6402)
theme_override_constants/separation = 20
alignment = 1

[node name="Main menu" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Main menu"

[node name="Quit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Quit the game"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xwrr1")
}

[connection signal="pressed" from="Control/VBoxContainer/Main menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
